Fix lỗi security